--- a/fullscreen.html
+++ b/fullscreen.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Full Screen Responsive SVG</title>
         <style>
@@ -11,9 +12,8 @@
             body {
                 margin: 0;
                 padding: 0;
-                height: 100%;
+                height: 100vh;
             }
-
             .full-screen {
                 width: 100vw;
                 height: 100vh;
@@ -23,14 +23,12 @@
                 background-color: #f0f0f0cd;
                 /* Optional background color */
             }
-
             svg {
-                width: 100%;
-                height: 100%;
+                width: 100vw;
+                height: 100vh;
             }
         </style>
     </head>
-
     <body>
         <div class="full-screen">
             <!-- Replace this with your SVG -->
