--- a/someoutstandingwebs.html
+++ b/someoutstandingwebs.html
@@ -49,16 +49,16 @@
             
            
             <a href="https://www.cssdesignawards.com/sites/avark-agency/46476/" target="_blank">
-                <img style=" width: 50%;" src="./assets/webs/Avark agency.jpg" alt="Captura de pantalla de avark-agency" />
+                <img  src="./assets/webs/Avark agency.jpg" alt="Captura de pantalla de avark-agency" />
             </a>
             <a href="https://thefwa.com/cases/cosmos-studio" target="_blank">
-                <img style=" width: 50%;" src="./assets/webs/Cosmo studio.jpg" alt="Captura de pantalla de cosmos-studio" />
+                <img  src="./assets/webs/Cosmo studio.jpg" alt="Captura de pantalla de cosmos-studio" />
             </a>
             <a href="https://winners.webbyawards.com/2024/ai-metaverse-virtual/general-virtual-experiences/arts-fashion-retail-culture/297049/sphere-art--promo" target="_blank">
-                <img style=" width: 50%;" src="./assets/webs/Sphere art and promo.jpg" alt="Captura de pantalla de sphere-art--promo" />
+                <img  src="./assets/webs/Sphere art and promo.jpg" alt="Captura de pantalla de sphere-art--promo" />
             </a>
             <a href="https://www.awwwards.com/sites/phopet-ai" target="_blank">
-                <img style=" width: 50%;" src="./assets/webs/Phopet.jpg" alt="Captura de pantalla de phopet-ai" />
+                <img  src="./assets/webs/Phopet.jpg" alt="Captura de pantalla de phopet-ai" />
             </a>
         </div>
     </main>
