--- a/404.html
+++ b/404.html
@@ -1,22 +1,34 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 404 - Página no encontrada</title>
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        body {
+            background-color: #1D1D1D;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        a {
+            color: #D8232A;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+    </style>
 </head>
 <body>
-    <div class="error-container">
-        <div class="error-box">
-            <h1 class="error-code">404</h1>
-            <p class="error-message">Oops! La página que buscas no existe.</p>
-            <p><a href="/" class="btn">Regresar al inicio</a></p>
-        </div>
+    <div>
+        <h1 style="font-size: 5em;">404</h1>
+        <p>Lo sentimos, la página que buscas no existe.</p>
+        <a href="index.html">Volver al inicio</a>
     </div>
 </body>
 </html>
