--- a/colors.html
+++ b/colors.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colors - Circuito F1 Madrid</title>
-    <link rel="stylesheet" href="./css/theme.css">
+    <meta charset="UTF-8"> <!-- Define el conjunto de caracteres de la página -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Asegura que la página sea responsive -->
+    <title>Colors - Circuito F1 Madrid</title> <!-- Título de la página -->
+    <link rel="stylesheet" href="./css/theme.css"> <!-- Enlace a la hoja de estilos del tema -->
     <style>
-        /* Estilos básicos para mostrar los colores */
+        /* Estilos específicos para mostrar los colores */
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
@@ -48,25 +48,18 @@
     <h1>Paleta de Colores</h1>
 
     <div class="color-container">
-        <!-- Cuadro para el color principal -->
         <div class="color-box" style="background-color: var(--primary-color);">
             <div class="color-name">--primary-color</div>
             <div class="color-value">#D8232A</div>
         </div>
-
-        <!-- Cuadro para el color secundario -->
         <div class="color-box" style="background-color: var(--secondary-color);">
             <div class="color-name">--secondary-color</div>
             <div class="color-value">#1D1D1D</div>
         </div>
-
-        <!-- Cuadro para el color del texto -->
         <div class="color-box" style="background-color: var(--text-color);">
             <div class="color-name">--text-color</div>
             <div class="color-value">#FFFFFF</div>
         </div>
-
-        <!-- Cuadro para el color de fondo -->
         <div class="color-box" style="background-color: var(--background-color);">
             <div class="color-name">--background-color</div>
             <div class="color-value">#F4F4F4</div>
