--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
         <img src="./assets/images/placeholder.jpg" alt="Imagen principal del Circuito"> <!-- Imagen de marcador, reemplazar con la deseada -->
     </section>
 
+    <!-- Bloque de texto debajo de la imagen principal -->
+    <section class="main-text"> <!-- Sección para el texto principal -->
+        <div class="text-container"> <!-- Contenedor del texto con márgenes y justificación -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada. Quisque tincidunt, nunc non pretium hendrerit, orci metus blandit erat, at tincidunt dui nisl et elit. Pellentesque vehicula augue id urna viverra, nec efficitur sapien gravida.</p>
+        </div>
+    </section>
+
     <!-- Pie de página -->
     <footer> <!-- Sección del footer -->
         <p>&copy; 2025 Circuito F1 Madrid. Todos los derechos reservados.</p> <!-- Derechos reservados -->
