--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Imagen principal -->
     <section class="main-image"> <!-- Sección para la imagen principal de la landing page -->
-        <img src="./assets/images/placeholder.jpg" alt="Imagen principal del Circuito"> <!-- Imagen de marcador, reemplazar con la deseada -->
+        <img src="./assets/images/circuito madrid.jpeg" alt="Imagen principal del Circuito"> <!-- Imagen de marcador, reemplazar con la deseada -->
     </section>
 
     <!-- Bloque de texto debajo de la imagen principal -->
