--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header-container"> <!-- Contenedor principal para organizar logo y navegación -->
             <!-- Logo del Circuito -->
             <div class="logo">
-                <img src="./assets/icons/logo.svg" alt="Logo del Circuito"> <!-- Imagen del logo del circuito -->
+                <img src="./assets/icons/logo f1 españa.png" alt="Logo del Circuito"> <!-- Imagen del logo del circuito -->
             </div>
             <!-- Navegación -->
             <nav class="navigation"> <!-- Navegación con enlaces a otras secciones -->
@@ -35,7 +35,9 @@
     <!-- Bloque de texto debajo de la imagen principal -->
     <section class="main-text"> <!-- Sección para el texto principal -->
         <div class="text-container"> <!-- Contenedor del texto con márgenes y justificación -->
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada. Quisque tincidunt, nunc non pretium hendrerit, orci metus blandit erat, at tincidunt dui nisl et elit. Pellentesque vehicula augue id urna viverra, nec efficitur sapien gravida.</p>
+            <p>¡Vive la emoción del regreso de la Fórmula 1 a Madrid! Nuestro ambicioso Gran Premio, destinado a ser líder en el Calendario Internacional, está diseñado para cautivar tanto a aficionados como a equipos.
+
+            <p> Sumérgete en la fusión perfecta de deporte y espectáculo, donde cada momento es inolvidable. ¡Prepárate para vivir la adrenalina renovada de la F1 en la capital!</p>
         </div>
     </section>
 
