--- a/index.html
+++ b/index.html
@@ -35,9 +35,23 @@
     <!-- Bloque de texto debajo de la imagen principal -->
     <section class="main-text"> <!-- Sección para el texto principal -->
         <div class="text-container"> <!-- Contenedor del texto con márgenes y justificación -->
-            <p>¡Vive la emoción del regreso de la Fórmula 1 a Madrid! Nuestro ambicioso Gran Premio, destinado a ser líder en el Calendario Internacional, está diseñado para cautivar tanto a aficionados como a equipos.
+            <p>¡Vive la emoción del regreso de la Fórmula 1 a Madrid! Nuestro ambicioso Gran Premio, destinado a ser líder en el Calendario Internacional, está diseñado para cautivar tanto a aficionados como a equipos.</p>
+            <p>Sumérgete en la fusión perfecta de deporte y espectáculo, donde cada momento es inolvidable. ¡Prepárate para vivir la adrenalina renovada de la F1 en la capital!</p>
+        </div>
+    </section>
 
-            <p> Sumérgete en la fusión perfecta de deporte y espectáculo, donde cada momento es inolvidable. ¡Prepárate para vivir la adrenalina renovada de la F1 en la capital!</p>
+    <!-- Nueva sección con imagen y texto -->
+    <section class="info-section"> <!-- Sección que incluye imagen y texto -->
+        <div class="info-container"> <!-- Contenedor para organizar imagen y texto -->
+            <!-- Imagen -->
+            <div class="info-image">
+                <img src="./assets/images/sample-image.jpg" alt="Imagen relacionada con el circuito"> <!-- Reemplazar con la imagen correspondiente -->
+            </div>
+            <!-- Texto -->
+            <div class="info-text">
+                <h2>MADRID SE UNE AL CALENDARIO INTERNACIONAL DE FÓRMULA 1</h2> <!-- Título destacado -->
+                <p>Fórmula 1 anuncia que el Gran Premio de España se celebrará en Madrid desde 2026 hasta 2035, ambos inclusive, gracias al acuerdo firmado para traer un nuevo circuito a la capital española. El nuevo circuito contará con 5,47 kilómetros de recorrido, incluyendo 20 curvas, y se espera que los coches alcancen una velocidad media de 213 km/h durante las vueltas de clasificación.</p>
+            </div>
         </div>
     </section>
 
