--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
     <!-- Bloque de texto debajo de la imagen principal -->
     <section class="main-text"> <!-- Sección para el texto principal -->
         <div class="text-container"> <!-- Contenedor del texto con márgenes y justificación -->
-            <p>¡Vive la emoción del regreso de la Fórmula 1 a Madrid! Nuestro ambicioso Gran Premio, destinado a ser líder en el Calendario Internacional, está diseñado para cautivar tanto a aficionados como a equipos.
-
-            <p> Sumérgete en la fusión perfecta de deporte y espectáculo, donde cada momento es inolvidable. ¡Prepárate para vivir la adrenalina renovada de la F1 en la capital!</p>
+            <p>¡Vive la emoción del regreso de la Fórmula 1 a Madrid! Nuestro ambicioso Gran Premio, destinado a ser líder en el Calendario Internacional, está diseñado para cautivar tanto a aficionados como a equipos.</p>
+            <p>Sumérgete en la fusión perfecta de deporte y espectáculo, donde cada momento es inolvidable. ¡Prepárate para vivir la adrenalina renovada de la F1 en la capital!</p>
         </div>
     </section>
 
