--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Asegura que la página sea responsive -->
     <title>Landing Page - Circuito F1 Madrid</title> <!-- Título que aparece en la pestaña del navegador -->
 
-    <!-- Enlace al archivo principal de estilos CSS -->
-    <link rel="stylesheet" href="./css/index.css">
+    <!-- Enlace a los archivos de estilos -->
+    <link rel="stylesheet" href="./css/index.css"> <!-- Estilos específicos para la estructura -->
+    <link rel="stylesheet" href="./css/theme.css"> <!-- Estilos globales del tema -->
 </head>
 <body>
     <!-- Encabezado principal -->
