--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Asegura que la página sea responsive -->
     <title>Landing Page - Circuito F1 Madrid</title> <!-- Título que aparece en la pestaña del navegador -->
 
-    <!-- Enlace a los archivos de estilos -->
-    <link rel="stylesheet" href="./css/index.css"> <!-- Estilos específicos para la estructura -->
-    <link rel="stylesheet" href="./css/theme.css"> <!-- Estilos globales del tema -->
+    <!-- Enlace a fuentes remotas desde Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
+    <!-- Enlace al archivo principal de estilos CSS -->
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/theme.css"> <!-- Tema CSS con tipografías -->
 </head>
 <body>
     <!-- Encabezado principal -->
