--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Metaetiquetas esenciales -->
     <meta charset="UTF-8"> <!-- Define el conjunto de caracteres (UTF-8 soporta caracteres especiales como tildes) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Asegura que la página sea responsive -->
-    <title>Landing Page - Circuito F1 Madrid</title> <!-- Título que aparece en la pestaña del navegador -->
+    <title>Circuito F1 Madrid</title> <!-- Título que aparece en la pestaña del navegador -->
 
     <!-- Enlace a fuentes remotas desde Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -12,6 +12,22 @@
     <!-- Enlace al archivo principal de estilos CSS -->
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/theme.css"> <!-- Tema CSS con tipografías -->
+    <!-- Favicon estándar para navegadores -->
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/icons/favicons/favicon-96x96.png">
+    <link rel="icon" href="./assets/icons/favicons/favicon.ico">
+
+    <!-- Favicon para navegadores con soporte de SVG -->
+    <link rel="icon" type="image/svg+xml" href="./assets/icons/favicons/favicon.svg">
+
+    <!-- Apple Touch Icon para dispositivos iOS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/favicons/apple-touch-icon.png">
+
+    <!-- Manifest para aplicaciones web progresivas -->
+    <link rel="manifest" href="./manifest.json">
+
+    <!-- Iconos para Android (Web App Manifest) -->
+    <meta name="theme-color" content="#FFFFFF">
+
 </head>
 <body>
     <!-- Encabezado principal -->
