--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/index.css"> <!-- Archivo de estilos principal -->
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="96x96" href="./assets/icons/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://ik.imagekit.io/Silver11/Trabajo%20web/favicon-96x96.png?updatedAt=1736285277849">
 </head>
 <body>
     <!-- Encabezado -->
@@ -20,7 +20,7 @@
             <!-- Logo con enlace a la página de inicio -->
             <div class="logo">
                 <a href="index.html">
-                    <img src="./assets/icons/logo f1 españa.png" alt="Logo del Circuito">
+                    <img src="https://ik.imagekit.io/Silver11/Trabajo%20web/logo%20f1%20espa%C3%B1a.png?updatedAt=1736285277980" alt="Logo del Circuito">
                 </a>
             </div>
             <!-- Navegación principal -->
@@ -35,7 +35,7 @@
 
     <!-- Imagen principal -->
     <section class="main-image">
-        <img src="./assets/images/circuito madrid.jpeg" alt="Imagen del circuito de Madrid">
+        <img src="https://ik.imagekit.io/Silver11/Trabajo%20web/circuito%20madrid.jpeg?updatedAt=1736285277979" alt="Imagen del circuito de Madrid">
     </section>
 
     <!-- Texto principal -->
