--- a/store.html
+++ b/store.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/index.css"> <!-- Archivo de estilos principal -->
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="96x96" href="./assets/icons/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://ik.imagekit.io/Silver11/Trabajo%20web/favicon-96x96.png?updatedAt=1736285277849">
 </head>
 <body>
     <!-- Encabezado -->
@@ -20,13 +20,13 @@
             <!-- Logo con enlace a la página de inicio -->
             <div class="logo">
                 <a href="index.html">
-                    <img src="./assets/icons/logo f1 españa.png" alt="Logo del Circuito">
+                    <img src="https://ik.imagekit.io/Silver11/Trabajo%20web/logo%20f1%20espa%C3%B1a.png?updatedAt=1736285277980" alt="Logo del Circuito">
                 </a>
             </div>
             <!-- Navegación principal -->
             <nav class="navigation">
                 <ul>
-                    <li><a href="index.html">Información</a></li> <!-- Enlace a la página de inicio -->
+                    <li><a href="#">Información</a></li> <!-- Enlace a la página de inicio -->
                     <li><a href="#">Tienda</a></li> <!-- Página actual -->
                 </ul>
             </nav>
@@ -37,7 +37,7 @@
     <div class="store-container">
         <!-- Imagen a la izquierda -->
         <div class="store-image-container">
-            <img class="store-image" src="./assets/images/imagen f1 madrid 2.jpg" alt="Imagen promocional de la tienda">
+            <img class="store-image" src="https://ik.imagekit.io/Silver11/Trabajo%20web/imagen%20f1%20madrid%202.jpg?updatedAt=1736285277924" alt="Imagen promocional de la tienda">
         </div>
         <!-- Formulario de reserva a la derecha -->
         <div class="store-form-container">
