--- a/store.html
+++ b/store.html
@@ -26,8 +26,8 @@
             <!-- Navegación principal -->
             <nav class="navigation">
                 <ul>
-                    <li><a href="#">Información</a></li> <!-- Enlace a la página de inicio -->
-                    <li><a href="#">Tienda</a></li> <!-- Página actual -->
+                    <li><a href="404.html">Información</a></li> <!-- Enlace a la página de inicio -->
+                    <li><a href="store.html">Tienda</a></li> <!-- Página actual -->
                 </ul>
             </nav>
         </div>
