--- a/store.html
+++ b/store.html
@@ -44,9 +44,9 @@
             <div class="store-form">
                 <h2>Reserva tu entrada</h2>
                 <!-- Inputs estilizados pero no funcionales -->
-                <input type="text" placeholder="Nombre y Apellido" disabled>
-                <input type="email" placeholder="Correo Electrónico" disabled>
-                <input type="tel" placeholder="Teléfono" disabled>
+                <input type="text" placeholder="Nombre y Apellido">
+                <input type="email" placeholder="Correo Electrónico">
+                <input type="tel" placeholder="Teléfono">
                 <!-- Botón estilizado pero no funcional -->
                 <button disabled>Reservar</button>
             </div>
